tests/neg/inline-trait-body-override-var.scala
inline trait A:
  var x: Int = 1

class B extends A:
  override var x = 2 // error
